<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".manualPage">

    <Button
        android:id="@+id/fwdButton"
        android:layout_width="83dp"
        android:layout_height="77dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:background="@drawable/round_button"
        android:text="@string/fwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bwdButton"
        android:layout_width="83dp"
        android:layout_height="77dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:background="@drawable/round_button"
        android:text="@string/bwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="83dp"
        android:layout_height="77dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/round_button"
        android:text="@string/right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="83dp"
        android:layout_height="77dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="280dp"
        android:layout_marginRight="280dp"
        android:background="@drawable/round_button"
        android:text="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DigitalClock
        android:layout_width="272dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:textColor="#FFF1F1"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>